# PartInspector

./: .gitignore
src/InspectorGUI/: InspectorGUI.pro  InspectorGUI_zh_CN.ts  appicon.rc  main.cpp  mainwindow.cpp  mainwindow.h
src/InspectorGUI/Core/: CameraManager.cpp  CameraManager.h  ImageConverter.cpp  ImageConverter.h  InspectorThread.cpp  InspectorThread.h  LogManager.cpp  LogManager.h
src/InspectorGUI/Resources/: resources.qrc
src/InspectorGUI/Resources/Styles/: ModernDark.qss
src/InspectorGUI/Resources/translation/: InspectorGUI_zh_CN.qm
src/InspectorGUI/Widgets/ControlPanel/: CameraPanel.cpp  CameraPanel.h  InspectPanel.cpp  InspectPanel.h
src/InspectorGUI/Widgets/LogWidget/: LogWidget.cpp  LogWidget.h
src/InspectorGUI/Widgets/ViewWidget/: CustomGraphicView.cpp  CustomGraphicView.h  CustomImageItem.cpp  CustomImageItem.h  ImageView.cpp  ImageView.h
src/InspectorLib/: CMakeLists.txt  ExampleMain.cpp  Inspector.cpp  Inspector.h
